# test-setup-java-action

./: env.yml  pyproject.toml  try-to-start-jvm.py
.github/workflows/: lint-test-upon-push.yml  trigger-error.yml
ci/: python_310.yaml  python_311.yaml  python_312.yaml  python_39.yaml
src/: jvm.py
src/foobar/: __init__.py  jvm.py
src/foobar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test-setup-java-action/: __init__.py
tests/: conftest.py  test_foobar.py
