[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "foobar"
description = "Just to test GitHub actions stuff"
readme = "README.md"

authors = [
    { name = "Christoph Fink", email = "christoph.fink@helsinki.fi" },
]

dependencies = [
    "configargparse",
    "jpype1",
    "requests",
]
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = []
license = {text = "GPL-3.0-or-later or MIT"}

dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-lazy-fixtures"]


[project.urls]
Documentation = "https://foobar.readthedocs.org/"
Repository = "https://github.com/foobar/foobar.git"
"Change log" = "https://github.com/foobar/foobar/blob/main/CHANGELOG.md"
"Bug tracker" = "https://github.com/foobar/foobar/issues"

[tool.coverage.run]
omit = ["tests/*", ".virtualenv/**/*"]

[tool.jupytext.formats]
"docs/notebooks/" = "ipynb"
"docs/md/" = "md"

[tool.pytest.ini_options]
addopts = "-p no:faulthandler --cov --cov-report term-missing --cov-report xml"
filterwarnings = [
    "error",
    "ignore:Could not find R5 jar, trying to download it from upstream",
    "ignore:Successfully downloaded r5-"
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.dynamic]
version = {attr = "foobar.__version__"}
